tests/sksl/errors/DuplicateFunction.glsl
### Compilation failed:

error: 1: function 'void func()' was already defined
void func() {}
^^^^^^^^^^^
1 error
